--- a/.github/workflows/BidService_BuildDockerImage.yml
+++ b/.github/workflows/BidService_BuildDockerImage.yml
@@ -27,8 +27,9 @@ jobs:
       run: |
         docker login --username ${{secrets.DOCKER_USER}} --password ${{secrets.DOCKER_PASSWORD}}
     - name: Build the Docker image for BidService
+      working-directory: BidService
       run: |
-        docker build . --file BidService/Dockerfile --tag asnielsen789/bidservice:latest
+        docker build . --file Dockerfile --tag asnielsen789/bidservice:latest
     - name: Push the Docker image for BidService
       run: |
         docker push asnielsen789/bidservice:latest
