--- a/AzureEnv/nginx.conf
+++ b/AzureEnv/nginx.conf
@@ -16,9 +16,9 @@ http {
     upstream customerservice {
         server localhost:5003 max_fails=3 fail_timeout=10s;
     }
-#    upstream itemservice {
-#        server localhost:5004 max_fails=3 fail_timeout=10s;
-#    }
+    upstream itemservice {
+        server localhost:5004 max_fails=3 fail_timeout=10s;
+    }
 #    upstream legalservice {
 #        server localhost:5005 max_fails=3 fail_timeout=10s;
 #    }
@@ -29,31 +29,31 @@ http {
     server {
         listen 80;
 		root /etc/nginx/html;
-#		location /assessment {
+#		location /api/assessment {
 #            proxy_pass http://assessmentservice;
 #            proxy_next_upstream error timeout http_503;
 #        }
-#        location /auction {
+#        location /api/auction {
 #            proxy_pass http://auctionservice;
 #            proxy_next_upstream error timeout http_503;
 #        }
-#        location /bid {
+#        location /api/bid {
 #            proxy_pass http://bidservice;
 #            proxy_next_upstream error timeout http_503;
 #        }
-        location /customer {
+        location /api/customer {
             proxy_pass http://customerservice;
             proxy_next_upstream error timeout http_503;
         }
-#        location /item {
-#            proxy_pass http://itemservice;
-#            proxy_next_upstream error timeout http_503;
-#        }
-#        location /legal {
+        location /api/item {
+            proxy_pass http://itemservice;
+            proxy_next_upstream error timeout http_503;
+        }
+#        location /api/legal {
 #            proxy_pass http://legalservice;
 #            proxy_next_upstream error timeout http_503;
 #        }
-#        location /sale {
+#        location /api/sale {
 #            proxy_pass http://saleservice;
 #            proxy_next_upstream error timeout http_503;
 #        }
