removed authorize for endpoints in auctionservice

--- a/AzureEnv/nginx.conf
+++ b/AzureEnv/nginx.conf
@@ -7,9 +7,9 @@ http {
 #    upstream assessmentservice {
 #        server localhost:5000 max_fails=3 fail_timeout=10s;
 #    }
-#    upstream auctionservice {
-#        server localhost:5001 max_fails=3 fail_timeout=10s;
-#    }
+    upstream auctionservice {
+        server localhost:5001 max_fails=3 fail_timeout=10s;
+    }
 #    upstream bidservice {
 #        server localhost:5002 max_fails=3 fail_timeout=10s;
 #    }
@@ -33,10 +33,10 @@ http {
 #            proxy_pass http://assessmentservice;
 #            proxy_next_upstream error timeout http_503;
 #        }
-#        location /api/auction {
-#            proxy_pass http://auctionservice;
-#            proxy_next_upstream error timeout http_503;
-#        }
+        location /api/auction {
+            proxy_pass http://auctionservice;
+            proxy_next_upstream error timeout http_503;
+        }
 #        location /api/bid {
 #            proxy_pass http://bidservice;
 #            proxy_next_upstream error timeout http_503;
