--- a/BidWorker/appsettings.Development.json
+++ b/BidWorker/appsettings.Development.json
@@ -5,10 +5,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "MongoDBSettings": {
-    "DatabaseName": "GODatabase",
-    "BidCollection": "bids",
-    "MongoConnectionString": "mongodb://admin:1234@localhost:27018/"
-  }
+  "AllowedHosts": "*"
 }
