legal, sale, assessmentservice ready for azure

--- a/AzureEnv/nginx.conf
+++ b/AzureEnv/nginx.conf
@@ -4,43 +4,43 @@ events {
     worker_connections 1000;
 }
 http {
-#    upstream assessmentservice {
-#        server localhost:5000 max_fails=3 fail_timeout=10s;
-#    }
+    upstream assessmentservice {
+        server localhost:5000 max_fails=3 fail_timeout=10s;
+    }
     upstream auctionservice {
         server localhost:5001 max_fails=3 fail_timeout=10s;
     }
-#    upstream bidservice {
-#        server localhost:5002 max_fails=3 fail_timeout=10s;
-#    }
+    upstream bidservice {
+        server localhost:5002 max_fails=3 fail_timeout=10s;
+    }
     upstream customerservice {
         server localhost:5003 max_fails=3 fail_timeout=10s;
     }
     upstream itemservice {
         server localhost:5004 max_fails=3 fail_timeout=10s;
     }
-#    upstream legalservice {
-#        server localhost:5005 max_fails=3 fail_timeout=10s;
-#    }
-#    upstream saleservice {
-#        server localhost:5006 max_fails=3 fail_timeout=10s;
-#    }
+    upstream legalservice {
+        server localhost:5005 max_fails=3 fail_timeout=10s;
+    }
+    upstream saleservice {
+        server localhost:5006 max_fails=3 fail_timeout=10s;
+    }
 
     server {
         listen 80;
 		root /etc/nginx/html;
-#		location /api/assessment {
-#            proxy_pass http://assessmentservice;
-#            proxy_next_upstream error timeout http_503;
-#        }
+		location /api/assessment {
+            proxy_pass http://assessmentservice;
+            proxy_next_upstream error timeout http_503;
+        }
         location /api/auction {
             proxy_pass http://auctionservice;
             proxy_next_upstream error timeout http_503;
         }
-#        location /api/bid {
-#            proxy_pass http://bidservice;
-#            proxy_next_upstream error timeout http_503;
-#        }
+        location /api/bid {
+            proxy_pass http://bidservice;
+            proxy_next_upstream error timeout http_503;
+        }
         location /api/customer {
             proxy_pass http://customerservice;
             proxy_next_upstream error timeout http_503;
@@ -49,14 +49,14 @@ http {
             proxy_pass http://itemservice;
             proxy_next_upstream error timeout http_503;
         }
-#        location /api/legal {
-#            proxy_pass http://legalservice;
-#            proxy_next_upstream error timeout http_503;
-#        }
-#        location /api/sale {
-#            proxy_pass http://saleservice;
-#            proxy_next_upstream error timeout http_503;
-#        }
+        location /api/legal {
+            proxy_pass http://legalservice;
+            proxy_next_upstream error timeout http_503;
+        }
+        location /api/sale {
+            proxy_pass http://saleservice;
+            proxy_next_upstream error timeout http_503;
+        }
 		location / {
       		try_files $uri $uri/ $uri.html =404;
     	}
