--- a/AzureEnv/nginx.conf
+++ b/AzureEnv/nginx.conf
@@ -25,6 +25,9 @@ http {
     upstream saleservice {
         server localhost:5006 max_fails=3 fail_timeout=10s;
     }
+    upstream authservice {
+        server localhost:5020 max_fails=3 fail_timeout=10s;
+    }
 
     server {
         listen 80;
@@ -55,6 +58,10 @@ http {
         }
         location /api/sale {
             proxy_pass http://saleservice;
+            proxy_next_upstream error timeout http_503;
+        }
+        location /api/auth {
+            proxy_pass http://authservice;
             proxy_next_upstream error timeout http_503;
         }
 		location / {
